--- a/style.css
+++ b/style.css
@@ -1,5 +1,19 @@
 *
 {
-    background: #08080808;
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
+
+}
+body{
+    background: #080808;
     color: #fff;
+}
+#header{
+    width: 100%;
+    height: 100vh;
+    background-image: url(image/background.png);
+    background-size: cover;
+    background-position: center;
 }
