--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 }
 
 body {
-    background: #080808;
-    color: #fff;
+    background:black;
+    color:white;
 }
 
 #header {
@@ -17,6 +17,9 @@ body {
     background-image: url(image/background.png);
     background-size: cover;
     background-position: center;
+}
+.container{
+    padding: 10px 10%;
 }
 
 nav {
@@ -52,6 +55,7 @@ nav ul li a ::after {
     position: absolute;
     left: 0;
     bottom: -6px;
+    transition: 0.5s;
 
 }
 
@@ -67,5 +71,69 @@ nav ul li a:hover::after {
     margin-top: 20px;
 }
 .header-text h1 span{
-    
+    color: #ff004f;
+}
+/*-------about----*/
+#about{
+    padding: 80px 0;
+    color: #ababab;
+}
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.about-col-1{
+    flex-basis: 35%;
+}
+.about-col-1 img{
+    width: 100%;
+    border-radius: 15px;
+}
+.about-col-2{
+    flex-basis: 60%;
+}
+.sub-title{ 
+    font-size: 60px;
+    font-weight: 600;
+    color: #fff;
+}
+
+.tab-titles{
+    display: flex;
+    margin: 20px 0 40px;
+}
+.tab-links{
+    margin-right: 50px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+}
+.tab-links::after{
+    content:'';
+    width: 0;
+    height: 3px;
+    background: #ff004f;
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transition: 0.5s;
+}
+.tab-links.active-link::after{
+    width: 50%;
+}
+.tab-contents ul li{
+    list-style: none;
+    margin: 10px 0;
+}
+.tab-contents ul li span{
+    color: #ff004f;
+    font-size: 14px;
+}
+.tab-contents{
+    display: none;
+}
+.tab-contents.active-tab{
+ display: block;
 }
